--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "cypress": "^10.0.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.13.0"
+    "@netlify/plugin-nextjs": "^4.13.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
