--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cypress": "^10.0.3",
+    "google-spreadsheet": "^3.3.0",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
